Added new p tag for the code, which show the changes in the file then previous one

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <!-- Your webpage content goes here -->
+	<p>This is the new line which i  have added in this file, And i am gonna commit</p>
 
 </body>
 </html>
